# vibraniumdome

./: CONTRIBUTING.md  README.md  docker-compose.build.yml  docker-compose.yml
.github/workflows/: ci.yml
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  app-deployment.yaml  app-service.yaml  mysql-deployment.yaml  mysql-service.yaml  opensearch-configmap.yaml  opensearch-dashboard-configmap.yaml  opensearch-dashboards-config-configmap.yaml  (+12 more)
vibraniumdome-app/: .env.example  .gitignore  Dockerfile  README.md  components.json  docker-compose.yml  docker-deploy.sh  docker-entrypoint.sh  package.json  tailwind.config.js  tsconfig.json
vibraniumdome-opensearch/: .gitignore  README.md  client_example.py  config.yml  dashboard.ndjson  docker-compose.yml  log4j2.properties  opensearch-seed.sh  opensearch.yml  opensearch_dashboards.yml  pyproject.toml
vibraniumdome-shields/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-deploy.sh  docker-entrypoint.sh  otel_client.py  otel_client_builder.py  pyproject.toml  vibraniumdome_sdk_client_example.py
vibraniumdome-shields/examples/: .env.example  Dockerfile  README.md  chatbot.py  docker-deploy.sh  pyproject.toml  quickstart.py  streamlit_app.py  vibraniumdome_langchain_example.py  vibraniumdome_playground_example.py  vibraniumdome_playground_mock.py  vibraniumdome_sdk_client_example.py  vibraniumdome_sdk_stress.py
vibraniumdome-shields/examples/.streamlit/: config.toml
vibraniumdome-streamlit/: README.md  playground.py  pyproject.toml
(+129 files in other folders)
