[tool.poetry]
name = "vibraniumdome-examples"
version = "0.1.0"
description = ""
authors = ["Uri Shamay <cmpxchg16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, !=3.9.7, <4.0"
openai = "^1.14.3"
httpx = "^0.27.0"
streamlit = "^1.32.2"
termcolor = "^2.4.0"
bs4 = "^0.0.2"
requests = "^2.31.0"
exceptiongroup = "^1.2.0"
vibraniumdome-sdk = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
